crates/polychem/src/atoms/snapshots/polychem__atoms__chemical_composition__tests__composition_errors-9.snap
---
source: crates/polychem/src/atoms/chemical_composition.rs
description: "chemical_composition(\"H2O+P\")"
expression: out
---
  × expected a chemical formula (optionally followed by a '+' or '-' and a
  │ particle offset), or a standalone particle offset
  ├─▶   × expected a particle (like p or e), optionally preceded by a number
  │   
  ├─▶   × expected a particle symbol
  │   
  ╰─▶   × expected a lowercase ASCII letter
      
   ╭────
 1 │ H2O+P 
   ·     ▲
   ·     ╰── expected lowercase
   ╰────
