crates/polychem/src/atoms/snapshots/polychem__atoms__chemical_composition__tests__composition_errors.snap
---
source: crates/polychem/src/atoms/chemical_composition.rs
description: "chemical_composition(\"NH2[100Tc]O4\")"
expression: out
---
  × expected a chemical formula (optionally followed by a '+' or '-' and a
  │ particle offset), or a standalone particle offset
  ├─▶   × expected an element (like Au) or an isotope (like [15N]) optionally
  │     │ followed by a number
  │   
  ╰─▶   × the isotope "Tc-100" could not be found in the supplied atomic
      database,
        │ though the following Technetium isotopes were found: [97, 98, 99]
        help: double-check for typos, or add a new entry to the atomic
      database
      
   ╭────
 1 │ NH2[100Tc]O4 
   ·    ───┬───
   ·       ╰── isotope not found
   ╰────
