crates/polychem/src/atoms/snapshots/polychem__atoms__chemical_composition__tests__composition_fail_write-2.snap
---
source: crates/polychem/src/atoms/chemical_composition.rs
description: "write!(&mut buf[..], \"{both}\").into_diagnostic()"
expression: out
---
  × failed to write whole buffer
