crates/polychem/src/atoms/snapshots/polychem__atoms__chemical_composition__tests__composition_fail_write.snap
---
source: crates/polychem/src/atoms/chemical_composition.rs
description: "write!(&mut buf[..], \"{just_particle}\").into_diagnostic()"
expression: out
---
  × failed to write whole buffer
